# ubiwell-study-backend-core

./: .gitignore  FRAMEWORK_SUMMARY.md  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  TEST_README.md  create_admin_user.py  debug_admin_user.py  debug_dashboard.py  fix_templates.py  fix_wsgi_files.py  process_test_data.py  pyproject.toml  requirements.txt  setup.py  setup_study.py  setup_study_redhat.py  test_pipeline_step_by_step.py  update_core.py  upload_test_data.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  EXTENSION_GUIDE.md  README.md
study_framework_core/: README.md  __init__.py  pyproject.toml
study_framework_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
study_framework_core/core/: __init__.py  api.py  config.py  dashboard.py  extension_base.py  handlers.py  internal_web.py  landing_page.py  navigation_registry.py  processing.py  processing_scripts.py  schemas.py
study_framework_core/examples/: study_with_config.py
study_framework_core/scripts/: generate_summaries.sh  process_data.sh  setup_cron_jobs.sh
study_framework_core/static/css/: core_styles.css
study_framework_core/static/js/: core_dashboard.js
study_framework_core/templates/: compliance_downloader.html  config-schedule.html  dashboard_base.html  ema-schedule.html  landing_page.html  login.html  navigation.html  user_detail.html  user_management.html
tests/: API_TEST_GUIDE.md  README.md  create_admin_user.py  fix_wsgi_files.py  install_requirements.py  test_api_endpoints.py  test_pipeline_step_by_step.py
