[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-framework-core"
version = "1.0.0"
description = "Core framework for data collection studies"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "flask-restful>=0.3.9",
    "gunicorn>=20.0.0",
    "pymongo>=4.0.0",
    "marshmallow>=3.0.0",
    "werkzeug>=2.0.0",
    "geopy>=2.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["study_framework_core*"]

[tool.setuptools.package-data]
study_framework_core = [
    "templates/*.html",
    "static/css/*.css",
    "static/js/*.js",
]
